welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: not found: type Booleen
def move(nbPas: Int,versLAvant: Booleen) {
                                ^